# csess

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-16-csess.md  2026-06-16-csess.md.tasks.json
docs/superpowers/specs/: 2026-06-16-csess-design.md
src/: cli.rs  discovery.rs  filter.rs  main.rs  output.rs  session.rs
tests/: cli.rs
