[package]
name = "csess"
version = "0.5.0"
edition = "2021"
description = "Fast lister for Claude Code sessions in a folder and its subprojects"
repository = "https://github.com/sibincbaby/csess"
homepage = "https://github.com/sibincbaby/csess"
license = "MIT"
readme = "README.md"
keywords = ["claude", "cli", "sessions", "ai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
rayon = "1"
comfy-table = "7"
fuzzy-matcher = "0.3"
dirs = "5"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
